--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,11 @@ plugins {
 }
 
 android {
-    namespace 'com.example.apklader'
+    namespace 'com.example.apkloader'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.apklader"
+        applicationId "com.example.apkloader"
         minSdk 24
         targetSdk 33
         versionCode 1
@@ -33,6 +33,7 @@ android {
 
 dependencies {
     implementation project(':pluginManager')
+    implementation 'com.squareup.okhttp:okhttp:2.7.5'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
